# pca

./: README.md  pyproject.toml
scripts/: uv_mac.sh
src/: 10d_example.ipynb  2d_example.ipynb  data.py  main.ipynb  torch_svd.ipynb  weighted_pca.ipynb  weighted_randomized_pca.ipynb  zz_hydra_example.py
src/config/: test.yaml
src/utils/: hydra_utils.py  logger.py  typing.py
